<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

        <EditText
            android:id="@+id/TXTUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/TXTEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhoneNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/TXTCountryCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code"
                android:layout_weight="2"
                android:inputType="number" />

            <EditText
                android:id="@+id/TXTPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:layout_weight="1"
                android:inputType="phone" />
        </LinearLayout>

        <TextView
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/TXTPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RetypePassword" />

        <EditText
            android:id="@+id/TXTRetypePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/BTNRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top_bottom"
            android:onClick="click"
            android:paddingLeft="@dimen/padding_buttons"
            android:paddingRight="@dimen/padding_buttons"
            android:text="@string/Register" />
    </LinearLayout>

</ScrollView>