<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/TXTUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/TXTPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TXVForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/login_margin_top_bottom"
        android:layout_marginTop="@dimen/login_margin_top_bottom"
        android:background="@drawable/login_links"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/Forgot_your_passwordQ"
        android:textColor="@color/color_link"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BTNLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="click"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:text="@string/Login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/login_top" >
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInWithP"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textView3" >

            <ImageButton
                android:id="@+id/BTNFacebookLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_links"
                android:contentDescription="@string/FbLogin"
                android:onClick="click"
                android:src="@drawable/btn_facebook_login" />

            <ImageButton
                android:id="@+id/BTNTwitterLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_links"
                android:contentDescription="@string/TwLogin"
                android:onClick="click"
                android:src="@drawable/btn_twitter_login" />
        </LinearLayout>

        <TextView
            android:id="@+id/TXVSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/linearLayout1"
            android:background="@drawable/login_links"
            android:clickable="true"
            android:onClick="click"
            android:text="@string/Signup"
            android:textColor="@color/color_link"
            android:textSize="@dimen/login_text" />
    </RelativeLayout>

</LinearLayout>