<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProfilePicture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Select_your_profile_image_or_take_a_picture" />

        <ImageView
            android:id="@+id/IMVProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/picture_regis_margin"
            android:background="@drawable/picture_back"
            android:clickable="true"
            android:padding="@dimen/picture_padding"
            android:src="@drawable/ic_profile_empty"
            android:contentDescription="@string/contentDesc" />

        <TextView
            style="@style/TextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Status" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Write_the_first_thing_that_comes_to_mind" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/IMBStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_links"
                android:src="@drawable/ic_status_online"
                android:contentDescription="@string/contentDesc" />

            <EditText
                android:id="@+id/TXTStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/BTNNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top_bottom"
            android:paddingLeft="@dimen/padding_buttons"
            android:paddingRight="@dimen/padding_buttons"
            android:text="@string/Next" />
    </LinearLayout>

</ScrollView>